# 2D-heterogeneous-metamorphosis

./: CMakeLists.txt  README.md  distance_field.cpp  pictures_to_mpeg4.sh
Article(Supplimentary files)/videos/: figure10(b).mpg  figure10(c).mpg  figure12.mpg  figure13.mpg  figure15.mpg  figure16.mpg  figure17(a).mpg  figure17(c).mpg  figure17(d).mpg  figure18.mpg  figure19.mpg  figure20.mpg  figure5.mpg
ExternalLibs/GeoTools/Mathematics/: ACosEstimate.h  APConversion.h  APInterval.h  ASinEstimate.h  ATanEstimate.h  AdaptiveSkeletonClimbing2.h  AdaptiveSkeletonClimbing3.h  AlignedBox.h  ApprCircle2.h  ApprCone3.h  ApprCylinder3.h  ApprEllipse2.h  ApprEllipseByArcs.h  ApprEllipsoid3.h  ApprGaussian2.h  ApprGaussian3.h  ApprGreatCircle3.h  ApprHeightLine2.h  ApprHeightPlane3.h  ApprOrthogonalLine2.h  ApprOrthogonalLine3.h  ApprOrthogonalPlane3.h  ApprParaboloid3.h  ApprParallelLines2.h  ApprPolynomial2.h  ApprPolynomial3.h  ApprPolynomial4.h  ApprPolynomialSpecial2.h  ApprPolynomialSpecial3.h  ApprPolynomialSpecial4.h  ApprQuadratic2.h  ApprQuadratic3.h  ApprQuery.h  ApprSphere3.h  ApprTorus3.h  ArbitraryPrecision.h  Arc2.h  Array2.h  Array3.h  Array4.h  (+396 more)
ExternalLibs/GeoTools/Mathematics/GPU/: GPUFluid2.cpp  GPUFluid2.h  GPUFluid2AdjustVelocity.cpp  GPUFluid2AdjustVelocity.h  GPUFluid2ComputeDivergence.cpp  GPUFluid2ComputeDivergence.h  GPUFluid2EnforceStateBoundary.cpp  GPUFluid2EnforceStateBoundary.h  GPUFluid2InitializeSource.cpp  GPUFluid2InitializeSource.h  GPUFluid2InitializeState.cpp  GPUFluid2InitializeState.h  GPUFluid2Parameters.h  GPUFluid2SolvePoisson.cpp  GPUFluid2SolvePoisson.h  GPUFluid2UpdateState.cpp  GPUFluid2UpdateState.h  GPUFluid3.cpp  GPUFluid3.h  GPUFluid3AdjustVelocity.cpp  GPUFluid3AdjustVelocity.h  GPUFluid3ComputeDivergence.cpp  GPUFluid3ComputeDivergence.h  GPUFluid3EnforceStateBoundary.cpp  GPUFluid3EnforceStateBoundary.h  GPUFluid3InitializeSource.cpp  GPUFluid3InitializeSource.h  GPUFluid3InitializeState.cpp  GPUFluid3InitializeState.h  GPUFluid3Parameters.h  GPUFluid3SolvePoisson.cpp  GPUFluid3SolvePoisson.h  GPUFluid3UpdateState.cpp  GPUFluid3UpdateState.h  GPUGenerateMeshUV.h  GTMathematicsGPU.cpp  GTMathematicsGPU.h  GTMathematicsGPUPCH.h
Heter.2dSTB_lib/: CMakeLists.txt
Heter.2dSTB_lib/include/: STTI.h  distanceTransform2D.h  heter2dSTB.h  imageProc.h  interpolation2D.h  render2D.h  timer.hpp
Heter.2dSTB_lib/src/: STTI.cpp  distanceTransform2D.cpp  heter2dSTB.cpp  imageProc.cpp  interpolation2D.cpp  render2D.cpp
STB_LIB/: CMakeLists.txt
STB_LIB/include/: colourInterpolation.h  colourSegmentation.h  distanceTransform2D.h  imageProc.h  imageSegmentation.h  metamorphosis.h
STB_LIB/src/: colourInterpolation.cpp  colourSegmentation.cpp  distanceTransform2D.cpp  imageProc.cpp  imageSegmentation.cpp  metamorphosis.cpp
cmake/: FindGLM.cmake  FindSFML.cmake
include/: distance_field.h  shader.h  stb_tricks.h
sample/: 2d_blend.cpp  CMakeLists.txt
samples/: 2d_blend.cpp  CMakeLists.txt
src/: 2d_blend.cpp  distance_field.cpp  get_step  shader.cpp  stb_tricks.cpp
videos/: figure10(a).mpg  figure11(a).mpg  figure11(b).mpg  figure11(c).mpg  figure15.mpg  figure16.mpg  figure17(b).mpg  figure18.mpg  figure19.mpg  figure8.mpg  space-time-blending(example).mpg
